# django-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  seed.py
escola/: admin.py  models.py  serializer.py  views.py
locale/pt_BR/LC_MESSAGES/: django.po
setup/: settings.py  urls.py
