[tool.poetry]
name = "escola_api_drf"
version = "0.1.0"
description = ""
authors = ["arturj <arturjardel9@gmail.com>"]
readme = "README.md"
packages = [{include = "escola_api_drf"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.0.7"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
